Fri Apr 20 10:37:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/Makefile.am: Add intermediate target when running swig, in
	  line with comment recently added to xapian-core/HACKING regarding
	  rules with multiple targets.

Fri Apr 20 00:30:16 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/util.i: Sort out typemap for the "Query from operator
	  and array of Query objects" constructor.
	* java-swig/Makefile.am: Delete the "extra" .class files upon
	  "make clean".  Query$1.class seems to be useless, so don't
	  include it in the .jar.  Use perl to insert a call to load the JNI
	  library automatically before we try to use it since SWIG doesn't
	  seem to do this for us.  Now "make check" passes, but with lots
	  commented out still.

Fri Apr 20 00:16:17 BST 2007  Olly Betts <olly@survex.com>

	* python/Makefile.am: Don't assume Perl is `perl' - use `$(PERL)'
	  instead.

Thu Apr 19 22:37:05 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/util.i: Rename get_description() methods to toString()
	  in Java.      

Thu Apr 19 22:34:59 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Fix bogus line-break in CLEANFILES.
	  Add xapian_wrap.h to BUILT_SOURCES and swig running rule.

Thu Apr 19 22:34:28 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Query::get_description() is actually const.

Thu Apr 19 18:20:59 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Handle the extra .class files generated by
	  nested classes.

Thu Apr 19 14:45:19 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,java-swig/,xapian.i: First cut of Java
	  bindings built using SWIG.  Numerous things aren't wrapped in
	  a compatible way (not sure if we can sensibly be 100% compatible
	  anyway though) and 'make check' fails to run, but this has
	  reached the stage where version control is needed.

Thu Apr 19 00:41:25 BST 2007  Olly Betts <olly@survex.com>
