@@ -93,7 +93,8 @@ libxapian_jni_la_SOURCES = xapian_wrap.cc
 BUILT_SOURCES = xapian_wrap.cc xapian_wrap.h $(XAPIAN_SWIG_JAVA_SRCS)
 
 if MAINTAINER_MODE
-xapian_wrap.cc xapian_wrap.h $(XAPIAN_SWIG_JAVA_SRCS): $(SWIG_sources) util.i
+xapian_wrap.cc xapian_wrap.h $(XAPIAN_SWIG_JAVA_SRCS): xapian_wrap.stamp
+xapian_wrap.stamp: $(SWIG_sources) util.i
 	: # Make sure that we don't package stale generated sources in the
 	: # case where SWIG changes its mind as to which files it generates.
 	-rm -f $(XAPIAN_SWIG_JAVA_SRCS)
@@ -105,6 +106,7 @@ xapian_wrap.cc xapian_wrap.h $(XAPIAN_SWIG_JAVA_SRCS): $(SWIG_sources) util.i
 	$(PERL) -pi -e 'print "    System.loadLibrary(\"xapian_jni\");\n" if /^\s*swig_module_init/' XapianJNI.java
 	: # Check that all the sources we expected were generated.
 	ls $(XAPIAN_SWIG_JAVA_SRCS) > /dev/null
+	touch $@
 
 CLEANFILES += $(BUILT_SOURCES)
 else
