@@ -32,10 +32,12 @@ _xapian_la_SOURCES = xapian_wrap.cc xapian_wrap.h
 _xapian_la_LIBADD = $(XAPIAN_LIBS)
 
 if MAINTAINER_MODE
-xapian_wrap.cc xapian_wrap.h: $(SWIG_sources) util.i
+xapian_wrap.cc xapian_wrap.h: xapian_wrap.stamp
+xapian_wrap.stamp: $(SWIG_sources) util.i
 	$(SWIG) $(SWIG_includes) $(SWIG_FLAGS) -c++ \
 	    -feature _xapian -ruby \
 	    -o xapian_wrap.cc $(SWIG_mainsource)
+	touch $@
 
 CLEANFILES = $(BUILT_SOURCES)
 else
