@@ -1,3 +1,9 @@
+Fri Apr 20 10:46:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* csharp/Makefile.am,java-swig/Makefile.am,php/Makefile.am,
+	  python/Makefile.am,ruby/Makefile.am: Add intermediate targets in
+	  all cases where swig generates multiple output files.
+
 Fri Apr 20 10:37:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* python/Makefile.am: Add intermediate target when running swig, in
